# pi-kiosk

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: kiosk.env.sample
scripts/: install.sh
services/: kiosk-browser.service  kiosk-sensors.service  kiosk-vnc.service
src/: kiosk_sensors.py  kiosk_xsession.sh  launch_kiosk.sh  launch_vnc.sh
src/pi_kiosk/: __init__.py  config.py  display.py  logging_utils.py  main.py  sensors.py
