[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-kiosk"
version = "0.1.0"
description = "Sensor-driven Home Assistant kiosk controller for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Bill"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Home Automation",
]
dependencies = [
  "adafruit-blinka>=8.0",
  "adafruit-circuitpython-vl53l4cd>=1.1",
  "adafruit-circuitpython-veml7700>=1.1",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "black>=24.2",
  "flake8>=7.0",
  "mypy>=1.8",
  "types-setuptools",
]

[project.scripts]
kiosk-sensors = "pi_kiosk.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.coverage.run]
branch = true
source = ["pi_kiosk"]
